# ATC

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
pass/: CMakeLists.txt  pass.cpp
tests/halide-c/: Makefile
tests/misc/: HALIDE.c  HALIDE.cpp  HALIDE.h  Makefile  README.md  halide.h
tests/test0/: Makefile  README.md  program.c  program.cpp  test.c
tests/test1/: Makefile  test.bc  test.c  test.ll  test_norm.bc  test_norm.ll  test_opt  test_opt.bc  test_opt.ll  test_with_metadata.bc  test_with_metadata.ll
